  experimental and may change. With this change, you may use the OpenTelemetry
  Metrics API to create custom metrics and the APM agent will ship those
  metrics to APM server. As well, you may use the OpenTelemetry Metrics SDK
  and the APM agent will automatically add a MetricReader to ship metrics to
  APM server. See the <<opentelemetry-bridge>> for details. ({pull}3152[#3152])

[float]
===== Bug fixes

[float]
===== Chores

* Add cookie map in transactions' request context and redact cookie header ({pull}3322[#3322])

* Stop testing `express-graphql` instrumentation -- the module is deprecated.
  ({pull}3304[#3304])


[[release-notes-3.45.0]]
==== 3.45.0 2023/04/28

[float]
===== Features

* Add `aws.s3.bucket` and `aws.s3.key` attributes for OpenTelemetry in S3 instrumentation.
  Spec https://github.com/open-telemetry/opentelemetry-specification/blob/v1.20.0/semantic_conventions/trace/instrumentation/aws-sdk.yml#L435
  ({issues}3150[#3150]).

[float]
===== Bug fixes

* Fix a possible crash in AWS Lambda Function instrumentation when an ELB-
  or API Gateway-triggered invocation received an `event` object with no
  `headers` field. ({issues}3286[#3286])

* Fix an edge case in instrumentation of `http.request()` and `https.request()`
  with node v19.9.0 and recently nightly builds of node v20.
  ({issues}3261[#3261])

[float]
===== Chores

* Update "engines" to support node v20. ({pull}3278[#3278])

* Restrict Next.js instrumentation to `<13.3.0` for now, because of a known
  issue with instrumentating the `next@13.3.0` dev server. ({issues}3263[#3263])


[[release-notes-3.44.1]]
==== 3.44.1 2023/04/06

[float]
===== Bug fixes

* Fix an issue where the APM agent receiving central config (from APM server)
  containing a value for `sanitized_field_names` would crash.
  ({issues}3247[#3247])


[[release-notes-3.44.0]]
==== 3.44.0 2023/04/03

[float]
===== Features

* Update the <<opentelemetry-bridge>> supported version of `@opentelemetry/api`