@@ -354,6 +354,18 @@ Agent.prototype.setCustomContext = function (context) {
   return true
 }
 
+Agent.prototype.setGlobalLabel = function (key, value) {
+  if (!this._conf.globalLabels) this._conf.globalLabels = []
+  const foundPos = this._conf.globalLabels.findIndex(([name]) => key === name)
+  if (foundPos > -1) {
+    this._conf.globalLabels[foundPos][1] = value
+  } else {
+    this._conf.globalLabels.push([key, value])
+  }
+  this._transport.config({ globalLabels: Object.fromEntries(this._conf.globalLabels) })
+  return true
+}
+
 Agent.prototype.setLabel = function (key, value, stringify) {
   var trans = this._instrumentation.currTransaction()
   if (!trans) return false
